properly merge MVC into view-development
this commit incorporates every change necessary to make the view work
with the changes from the MVC branch